<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="#000000">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:textColor="#FFFFFF"
        android:textAlignment="center"
        android:textSize="32sp"
        android:text="@string/Heading"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="16dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="#262E42"
            android:layout_margin="8dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:text="@string/Team_A"
                android:textColor="#FFFFFF"
                android:textSize="28sp"
                android:gravity="center"
                android:layout_margin="8dp"

                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:text="@string/Team_A_Score"
                android:textColor="#FFFFFF"
                android:textSize="28sp"
                android:gravity="center"
                android:layout_margin="8dp"
                />

            <TextView
                android:id="@+id/ScoreA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="center"
                android:hint="@string/Team_A_InitialScore"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="28sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:text="@string/Fouls"
                android:textColor="#FFFFFF"
                android:textSize="28sp"
                android:gravity="center"
                android:layout_margin="8dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Fouls_Initially"
                android:textColorHint="#FFFFFF"
                android:gravity="center"
                android:textSize="26sp"
                android:id="@+id/FoulsA"
                android:layout_margin="8dp"
                android:textColor="#FFFFFF"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/incOn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/incOne"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/inTw"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/incTwo"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/incTh"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/incThree"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="24sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/increaseFour"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/incFour"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/increaseFive"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/incFive"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/incSi"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/incSix"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="24sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/incSe"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:text="@string/incSev"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/teamWipe"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:text="@string/teamWipe"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bonusone"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:text="@string/bonus"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/foul_A"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:text="@string/Foul"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp" />
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="#262E42"
            android:layout_margin="8dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:text="@string/Team_B"
                android:textColor="#FFFFFF"
                android:textSize="28sp"
                android:gravity="center"
                android:layout_margin="8dp"

                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:text="@string/Team_B_Score"
                android:textColor="#FFFFFF"
                android:textSize="28sp"
                android:gravity="center"
                android:layout_margin="8dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:hint="@string/Team_B_InitialScore"
                android:textColorHint="#FFFFFF"
                android:gravity="center"
                android:textSize="28sp"
                android:id="@+id/ScoreB"
                android:layout_margin="8dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:text="@string/Fouls"
                android:textColor="#FFFFFF"
                android:textSize="28sp"
                android:gravity="center"
                android:layout_margin="8dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Fouls_Initially"
                android:textColorHint="#FFFFFF"
                android:gravity="center"
                android:textSize="26sp"
                android:id="@+id/FoulsB"
                android:layout_margin="8dp"
                android:textColor="#FFFFFF"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/incOnB"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/incOne"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="22sp" />

                <Button
                    android:id="@+id/incTwB"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/incTwo"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="22sp" />

                <Button
                    android:id="@+id/incThB"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/incThree"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="22sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/incFoB"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/incFour"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/incFiveB"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/incFive"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="22sp" />

                <Button
                    android:id="@+id/incSiB"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/incSix"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="22sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/incSeB"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:text="@string/incSev"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/teamBwipe"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:text="@string/teamWipe"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bonusB"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:text="@string/bonus"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/foulB"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:text="@string/Foul"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/Reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/reset"
        android:textSize="30sp" />

</LinearLayout>